https://discord.com/channels/780756843663196230/985513641229058079/1051575993103552624

--- a/de/Scripts/Content/Story/Dialoge/City/DIA_VLK_11157_AppleTrader.d.json
+++ b/de/Scripts/Content/Story/Dialoge/City/DIA_VLK_11157_AppleTrader.d.json
@@ -10,7 +10,7 @@
   "DIA_AppleTrader_BuyApple_Description": "Ich hätte gerne einen Apfel. (4 Gold)",
   "DIA_AppleTrader_BuyApple_15_01": "Ich hätte gerne einen Apfel.",
   "DIA_AppleTrader_BuyApple_03_02": "Ich sagte zum halben Preis. Nicht umsonst!",
-  "DIA_AppleTrader_BuyApple_03_03": "Komm wieder wenn du Gold hast!",
+  "DIA_AppleTrader_BuyApple_03_03": "Komm wieder, wenn du Gold hast!",
   "DIA_AppleTrader_BuyApple_03_04": "Hier!",
   "DIA_AppleTrader_BuyApple_03_05": "Ich habe leider keine mehr dabei! Komm später wieder!",
   "DIA_AppleTrader_BuyApple_03_06": "Entschuldige, aber ich habe alle meiner Äpfel verkauft!",
